--- a/requirements.txt
+++ b/requirements.txt
@@ -25,13 +25,16 @@ idna==3.10
 ipykernel==6.29.5
 ipython==9.4.0
 ipython_pygments_lexers==1.1.1
+ipywidgets==8.1.7
 isoduration==20.11.0
 jedi==0.19.2
 Jinja2==3.1.6
 json5==0.12.0
 jsonpointer==3.0.0
-jsonschema==4.24.1
+jsonschema==4.25.0
 jsonschema-specifications==2025.4.1
+jupyter==1.1.1
+jupyter-console==6.6.3
 jupyter-events==0.12.0
 jupyter-lsp==2.2.5
 jupyter_client==8.6.3
@@ -41,6 +44,8 @@ jupyter_server_terminals==0.5.3
 jupyterlab==4.4.4
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.15
+lark==1.2.2
 MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
 mistune==3.1.3
@@ -48,6 +53,7 @@ nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
+notebook==7.4.4
 notebook_shim==0.2.4
 overrides==7.7.0
 packaging==25.0
@@ -70,6 +76,7 @@ referencing==0.36.2
 requests==2.32.4
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rfc3987-syntax==1.1.0
 rpds-py==0.26.0
 Send2Trash==1.8.3
 setuptools==80.9.0
@@ -89,3 +96,4 @@ wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+widgetsnbextension==4.0.14
